<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actv_quotes_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:lineSpacingExtra="1dp"
            android:maxLines="6"
            android:padding="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/deepRose"
            tools:text="@string/quote_home" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FADBD8"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actv_copy_quotes"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/default_bg_with_ripple"
                android:clickable="true"
                android:drawableStart="@drawable/ic_copy"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:paddingHorizontal="5dp"
                android:text="@string/copy"
                android:textColor="@color/maroon"
                android:textSize="14sp"
                android:textStyle="bold"
                app:drawableTint="@color/maroon" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actv_whatsapp_share_quotes"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/default_bg_with_ripple"
                android:clickable="true"
                android:drawableStart="@drawable/ic_whatsapp"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:paddingHorizontal="5dp"
                android:text="@string/whatsapp"
                android:textColor="@color/whatsappColor"
                android:textSize="14sp"
                android:textStyle="bold"
                app:drawableTint="@color/whatsappColor" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actv_share_quotes"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/default_bg_with_ripple"
                android:clickable="true"
                android:drawableStart="@drawable/ic_share_square"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:lines="1"
                android:paddingHorizontal="5dp"
                android:text="@string/share"
                android:textColor="@color/maroon"
                android:textSize="14sp"
                android:textStyle="bold"
                app:drawableTint="@color/maroon" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>