<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <RelativeLayout
        android:id="@+id/rl_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/lightPeach"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_logo"
            tools:src="@drawable/ic_stat_onesignal_default" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/aciv_share_app"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/share"
            android:focusable="true"
            android:padding="14dp"
            android:src="@drawable/ic_share" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_main_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"
                android:text="@string/app_tag_line"
                android:textAlignment="center"
                android:textSize="20sp"
                app:fontFamily="@font/playfair_display_bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/vp_home"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                        android:id="@+id/dots_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:padding="18dp"
                        app:dotsClickable="false"
                        app:dotsColor="@color/rose_200"
                        app:dotsSize="8dp"
                        app:dotsSpacing="4dp"
                        app:dotsWidthFactor="2.5"
                        app:progressMode="false"
                        app:selectedDotColor="@color/rose_500" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/ic_quote" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/quotes"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/roboto_medium" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="14dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_own1" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.5"
                        android:background="@color/black" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/actv_random_quote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:ellipsize="end"
                        android:maxLines="4"
                        android:paddingHorizontal="14dp"
                        android:paddingVertical="14dp"
                        android:text="@string/quote_home"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:fontFamily="@font/roboto" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_view_more_quotes"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/rose_500"
                android:contentDescription="@string/view_more_quotes"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="16dp"
                android:text="@string/view_more_quotes"
                android:textColor="@color/white"
                android:textSize="@dimen/home_bottom_button_text_size"
                app:icon="@drawable/ic_arrow_small_right"
                app:iconGravity="textEnd"
                app:iconPadding="16dp"
                app:iconSize="18dp"
                app:iconTint="@color/white"
                app:rippleColor="@color/rose_200"
                app:strokeColor="@color/rose_700"
                app:strokeWidth="1sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/ic_info" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/about_us"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/roboto_medium" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="24dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dev_card_corner_radius"
                app:cardElevation="4dp">

                <include
                    android:id="@+id/include_dev"
                    layout="@layout/item_developer_page" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightPeach"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mb_home_privacy_policy"
                        style="@style/HomeBottomMenuButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/privacy_policy"
                        android:text="@string/privacy_policy"
                        app:icon="@drawable/ic_shield_privacy" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mb_home_term_condition"
                        style="@style/HomeBottomMenuButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="0dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/terms_conditions"
                        android:text="@string/terms_conditions"
                        app:icon="@drawable/ic_term_conditions" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:alpha="0.1"
                    android:background="@color/gray_600" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/app_copyright_credit"
                    android:textAlignment="center"
                    android:textColor="@color/gray_600"
                    android:textSize="16sp"
                    app:fontFamily="@font/roboto" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/app_copyright"
                    android:textAlignment="center"
                    android:textColor="@color/gray_500"
                    android:textSize="13sp"
                    app:fontFamily="@font/roboto" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>